# firmware-manager

./: Cargo.toml
gtk/: Cargo.toml
gtk/ffi/: Cargo.toml
notify/: Cargo.toml
tools/: Cargo.toml
